hphp/test/zend/good/ext/date/tests/bug67253.php
<?php
$z = '';
var_dump(date_parse_from_format("aHa0", "0=G{$z}9UCNnF"));
