hphp/test/zend/bad/ext/standard/tests/assert/assert_error4.php
<?php
$sa = "0 $ 0";
var_dump($r2 = assert($sa, "Describing what was asserted"));